Vector transform not behaving correctly with camera space and cycles #47288

Closed
opened 2016-01-31 23:04:35 +01:00 by Clément Foucault · 5 comments

System Information
Windows x64 with GT960

Blender Version
Broken: 2.76.9 24f95a1

Short description of error
Vector transform node is not transforming correctly in glsl mode with Cycles.
Cycles camera Z vector is the oposite of the camera Z in BI.
So you need to have to invert the Z before applying the matrix when transforming from Camera Space, and after when transforming to Camera Space.

Exact steps for others to reproduce the error
Use a Vector transform node inside cycles with camera space. The render and the material preview does not match.

See this for a working version of the glsl in cycles.

371c289af8 (diff-17)

Capture.JPG

**System Information** Windows x64 with GT960 **Blender Version** Broken: 2.76.9 24f95a1 **Short description of error** Vector transform node is not transforming correctly in glsl mode with Cycles. Cycles camera Z vector is the oposite of the camera Z in BI. So you need to have to invert the Z before applying the matrix when transforming **from** Camera Space, and after when transforming **to** Camera Space. **Exact steps for others to reproduce the error** Use a Vector transform node inside cycles with camera space. The render and the material preview does not match. See this for a working version of the glsl in cycles. https://github.com/Hypersomniac/blender-shader/commit/371c289af8f44264854b697fa095425e00d69c70#diff-17 ![Capture.JPG](https://archive.blender.org/developer/F279363/Capture.JPG)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Alexander Romanov was assigned by Clément Foucault 2016-01-31 23:04:35 +01:00
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by 25de685d36

This issue was referenced by 25de685d3668b6ed10af144ff33e2d44da00df61

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks for the report and for the help!
Initially I wanted to transfer the correct matrices, but I met many problems that may lead in serious regression. So I used your fix.

Thanks for the report and for the help! Initially I wanted to transfer the correct matrices, but I met many problems that may lead in serious regression. So I used your fix.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47288
No description provided.