Fix T47288 Vector transform not behaving correctly with camera space and cycles